--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
 
     //https://github.com/lostzen/lost/blob/master/docs/geofences.md
     implementation 'com.mapzen.android:lost:3.0.2'
+
+    implementation 'com.android.support:cardview-v7:27.1.1'
 }
