--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "info.guardianproject.pinwheel"
+        applicationId "info.guardianproject.chime"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
@@ -32,4 +32,11 @@ dependencies {
     implementation 'com.mapzen.android:lost:3.0.2'
 
     implementation 'com.android.support:cardview-v7:27.1.1'
+
+    //using Sugar ORM for now, but need a better solution
+    implementation 'com.github.satyan:sugar:1.5'
+
+    //try this onboarding
+    implementation 'com.codemybrainsout.onboarding:onboarder:1.0.4'
+
 }
