--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,61 +4,75 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
+        android:name="com.orm.SugarApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name="com.orm.SugarApp"
-        >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.Launcher"
-            >
+            android:theme="@style/AppTheme.Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.SEND" />
                 <action android:name="android.intent.action.SENDTO" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data
-                    android:scheme="wcdp" />
+
+                <data android:scheme="wcdp" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".OnboardingActivity"
-            />
-        <service android:name=".GeoFenceIntentService" android:exported="false" />
+        <activity android:name=".OnboardingActivity" />
 
-        <service android:name=".service.WifiJobService"
-            android:permission="android.permission.BIND_JOB_SERVICE" android:exported="false" />
+        <service
+            android:name=".GeoFenceIntentService"
+            android:exported="false" />
+        <service
+            android:name=".service.WifiJobService"
+            android:exported="false"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
 
-        <receiver android:name=".service.WifiReceiver" android:exported="false" >
-               <intent-filter>
-                 <action android:name="android.net.wifi.WIFI_STATE_CHANGED" />
-               </intent-filter>
-             </receiver>
-         <service android:name=".service.WifiReceiver$WifiActiveService" android:exported="false" />
+        <receiver
+            android:name=".service.WifiReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.net.wifi.WIFI_STATE_CHANGED" />
+            </intent-filter>
+        </receiver>
 
-        <meta-data android:name="DATABASE" android:value="chime.db" />
-        <meta-data android:name="VERSION" android:value="1" />
-        <meta-data android:name="QUERY_LOG" android:value="true" />
-        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="info.guardianproject.chime" />
+        <service
+            android:name=".service.WifiReceiver$WifiActiveService"
+            android:exported="false" />
 
+        <meta-data
+            android:name="DATABASE"
+            android:value="chime.db" />
+        <meta-data
+            android:name="VERSION"
+            android:value="1" />
+        <meta-data
+            android:name="QUERY_LOG"
+            android:value="true" />
+        <meta-data
+            android:name="DOMAIN_PACKAGE_NAME"
+            android:value="info.guardianproject.chime" />
+
+        <activity android:name=".AddNewChimeActivity"></activity>
     </application>
 
 </manifest>
