--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "info.guardianproject.chime"
-        minSdkVersion 16
+        minSdkVersion 18
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -41,4 +41,10 @@ dependencies {
 
     //for nice step forms
     implementation 'com.ernestoyaquello.stepperform:vertical-stepper-form:0.9.9'
+
+    //beacons
+    implementation 'org.altbeacon:android-beacon-library:2+'
+
+    //fancy time
+    implementation 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
 }
