--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     //https://github.com/lostzen/lost/blob/master/docs/geofences.md
-    implementation 'com.mapzen.android:lost:3.0.2'
+    implementation 'com.mapzen.android:lost:3.0.4'
 
     implementation 'com.android.support:cardview-v7:27.1.1'
 
@@ -43,7 +43,7 @@ dependencies {
     implementation 'com.ernestoyaquello.stepperform:vertical-stepper-form:0.9.9'
 
     //beacons
-    implementation 'org.altbeacon:android-beacon-library:2+'
+    implementation 'org.altbeacon:android-beacon-library:2.15'
 
     //fancy time
     implementation 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
